--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -63,7 +63,7 @@ html {
 }
 
 @mixin shadow {
-  border: 1px solid hsl(var(--brand-hue) 10% 50% / 15%);
+  border: 1px solid hsl(var(--brand-hue) 10% 50% / 0.15);
   box-shadow:
     0 2.8px 2.2px hsl(var(--surface-shadow) / calc(var(--shadow-strength) + .03)),
     0 6.7px 5.3px hsl(var(--surface-shadow) / calc(var(--shadow-strength) + .01)),
